fixed header height and alignment

--- a/src/App.css
+++ b/src/App.css
@@ -118,4 +118,12 @@
     padding: 0;
     width: 100%;
   }
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    place-items: center;
+    font-size: 0.5rem;
+    max-height: 1.5rem;
+  }
 }
